v0.0.1/modules/schema/pages/class/MPMTestCategory.adoc
= `MPMTestCategory`
:toclevels: 4


+++Provides a reference to the Market Power Mitigation test identifiers and methods for the results of the DA or RT markets. Specific data is the test identifier (Price, Conduct, or Impact) and the test method (System MPM, Local MPM, Alternate System MPM, or Alternate Local MPM).+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:MPMTestCategory`


| CIM standard (perspective)
| IEC62325 (Market)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** *`MPMTestCategory`*


== Slots



.Associated classes
[d2,svg,theme=4]
----
vars: {
  d2-config: {
    pad: 20
  }
}
MPMTestCategory {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



MPMTestThreshold {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



MPMTestResults {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



MPMResourceStatus {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



DiagramObject {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



InstanceSet {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



Name {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}




MPMTestCategory -> MPMTestThreshold: MPMTestThreshold


MPMTestCategory -> MPMTestResults: MPMTestResults


MPMTestCategory -> MPMResourceStatus: MPMResourceStatus


MPMTestCategory -> DiagramObject: DiagramObjects


MPMTestCategory -> InstanceSet: InstanceSet


MPMTestCategory -> Name: Names


MPMTestCategory -> ChangeSetMember: PropertiesCIMDataObject


MPMTestCategory -> ChangeSetMember: TargetingCIMDataObject


legend: "" {
  style: {
    fill: transparent
    stroke: transparent
  }
  grid-rows: 3
  grid-columns: 2
  grid-gap: 10
  near: bottom-right
  iec61968_color: "" {
    style: {
      fill: "#d1e7c2"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61968_text: "IEC61968 (Enterprise)" {
    shape: text
  }
  iec61970_color: "" {
    style: {
      fill: "#eccfcb"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61970_text: "IEC61970 (Grid)" {
    shape: text
  }
  iec62325_color: "" {
    style: {
      fill: "#fffbef"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec62325_text: "IEC62325 (Market)" {
    shape: text
  }
}
----


[cols="3,1,3,6",width=100%]
|===
| Name | Cardinality | Type | Description

| <<InstanceSet,`InstanceSet`>>
| 1
| xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++

| <<purposeFlag,`purposeFlag`>>
| 0..1
| xref::enumeration/PurposeFlagType.adoc[`PurposeFlagType`]
| +++Nature of threshold data:
'M' - Mitigation threshold
'R' - Reporting threshold+++

| <<testIdentifier,`testIdentifier`>>
| 0..1
| xref::enumeration/MPMTestIdentifierType.adoc[`MPMTestIdentifierType`]
| +++1 - Global Price Test
2 - Global Conduct Test
3 - Global Impact Test
4 - Local Price Test
5 - Local Conduct Test
6 - Local Impact Test+++

| <<testMethod,`testMethod`>>
| 0..1
| xref::enumeration/MPMTestMethodType.adoc[`MPMTestMethodType`]
| +++The method of performing the market power monitoring. Examples are Normal (default) thresholds or Alternate thresholds.+++

| <<MPMResourceStatus,`MPMResourceStatus`>>
| 0..*
| xref::class/MPMResourceStatus.adoc[`MPMResourceStatus`]
| n/a

| <<MPMTestResults,`MPMTestResults`>>
| 0..*
| xref::class/MPMTestResults.adoc[`MPMTestResults`]
| n/a

| <<MPMTestThreshold,`MPMTestThreshold`>>
| 0..*
| xref::class/MPMTestThreshold.adoc[`MPMTestThreshold`]
| n/a

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++

| <<aliasName,`aliasName`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

| <<description,`description`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

| <<mRID,`mRID`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

| <<name,`name`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++

| <<DiagramObjects,`DiagramObjects`>>
| 0..*
| xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++

| <<Names,`Names`>>
| 0..*
| xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..*
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#MPMResourceStatus]
=== `MPMResourceStatus`


[cols="h,4",width=65%]
|===
| URI
| `cim:MPMTestCategory.MPMResourceStatus`
| Cardinality
| 0..*
| Type
| xref::class/MPMResourceStatus.adoc[`MPMResourceStatus`]


|===

//[discrete]
[#MPMTestResults]
=== `MPMTestResults`


[cols="h,4",width=65%]
|===
| URI
| `cim:MPMTestCategory.MPMTestResults`
| Cardinality
| 0..*
| Type
| xref::class/MPMTestResults.adoc[`MPMTestResults`]


|===

//[discrete]
[#MPMTestThreshold]
=== `MPMTestThreshold`


[cols="h,4",width=65%]
|===
| URI
| `cim:MPMTestCategory.MPMTestThreshold`
| Cardinality
| 0..*
| Type
| xref::class/MPMTestThreshold.adoc[`MPMTestThreshold`]


|===

//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#purposeFlag]
=== `purposeFlag`
+++Nature of threshold data:
'M' - Mitigation threshold
'R' - Reporting threshold+++

[cols="h,4",width=65%]
|===
| URI
| `cim:MPMTestCategory.purposeFlag`
| Cardinality
| 0..1
| Type
| xref::enumeration/PurposeFlagType.adoc[`PurposeFlagType`]


|===

//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#testIdentifier]
=== `testIdentifier`
+++1 - Global Price Test
2 - Global Conduct Test
3 - Global Impact Test
4 - Local Price Test
5 - Local Conduct Test
6 - Local Impact Test+++

[cols="h,4",width=65%]
|===
| URI
| `cim:MPMTestCategory.testIdentifier`
| Cardinality
| 0..1
| Type
| xref::enumeration/MPMTestIdentifierType.adoc[`MPMTestIdentifierType`]


|===

//[discrete]
[#testMethod]
=== `testMethod`
+++The method of performing the market power monitoring. Examples are Normal (default) thresholds or Alternate thresholds.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:MPMTestCategory.testMethod`
| Cardinality
| 0..1
| Type
| xref::enumeration/MPMTestMethodType.adoc[`MPMTestMethodType`]


|===


