v1.1.0/modules/schema/pages/class/MPMTestCategory.adoc
= `MPMTestCategory`
:toclevels: 4


+++Provides a reference to the Market Power Mitigation test identifiers and methods for the results of the DA or RT markets. Specific data is the test identifier (Price, Conduct, or Impact) and the test method (System MPM, Local MPM, Alternate System MPM, or Alternate Local MPM).+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:MPMTestCategory`


| CIM standard (perspective)
| IEC62325 (Market)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** *`MPMTestCategory`*


== Slots




[cols="1,1,2,1",width=100%]
|===
| Name | Type | Description | Inherited from

| <<MPMResourceStatus,`MPMResourceStatus`>>
//| [[slots_table.MPMResourceStatus]]<<MPMResourceStatus,`MPMResourceStatus`>>
| 0..* +
xref::class/MPMResourceStatus.adoc[`MPMResourceStatus`]
| _n/a_
| _n/a_

| <<MPMTestResults,`MPMTestResults`>>
//| [[slots_table.MPMTestResults]]<<MPMTestResults,`MPMTestResults`>>
| 0..* +
xref::class/MPMTestResults.adoc[`MPMTestResults`]
| _n/a_
| _n/a_

| <<MPMTestThreshold,`MPMTestThreshold`>>
//| [[slots_table.MPMTestThreshold]]<<MPMTestThreshold,`MPMTestThreshold`>>
| 0..* +
xref::class/MPMTestThreshold.adoc[`MPMTestThreshold`]
| _n/a_
| _n/a_

| <<purposeFlag,`purposeFlag`>>
//| [[slots_table.purposeFlag]]<<purposeFlag,`purposeFlag`>>
| 0..1 +
xref::enumeration/PurposeFlagType.adoc[`PurposeFlagType`]
| +++Nature of threshold data:
'M' - Mitigation threshold
'R' - Reporting threshold+++
| _n/a_

| <<testIdentifier,`testIdentifier`>>
//| [[slots_table.testIdentifier]]<<testIdentifier,`testIdentifier`>>
| 0..1 +
xref::enumeration/MPMTestIdentifierType.adoc[`MPMTestIdentifierType`]
| +++1 - Global Price Test
2 - Global Conduct Test
3 - Global Impact Test
4 - Local Price Test
5 - Local Conduct Test
6 -...+++
| _n/a_

| <<testMethod,`testMethod`>>
//| [[slots_table.testMethod]]<<testMethod,`testMethod`>>
| 0..1 +
xref::enumeration/MPMTestMethodType.adoc[`MPMTestMethodType`]
| +++The method of performing the market power monitoring. Examples are Normal (default) thresholds or Alternate thresholds.+++
| _n/a_

| <<DiagramObjects,`DiagramObjects`>>
//| [[slots_table.DiagramObjects]]<<DiagramObjects,`DiagramObjects`>>
| 0..* +
xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<InstanceSet,`InstanceSet`>>
//| [[slots_table.InstanceSet]]<<InstanceSet,`InstanceSet`>>
| 1 +
xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<Names,`Names`>>
//| [[slots_table.Names]]<<Names,`Names`>>
| 0..* +
xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
//| [[slots_table.PropertiesCIMDataObject]]<<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1 +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
//| [[slots_table.TargetingCIMDataObject]]<<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..* +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<aliasName,`aliasName`>>
//| [[slots_table.aliasName]]<<aliasName,`aliasName`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<description,`description`>>
//| [[slots_table.description]]<<description,`description`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<mRID,`mRID`>>
//| [[slots_table.mRID]]<<mRID,`mRID`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<name,`name`>>
//| [[slots_table.name]]<<name,`name`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.aliasName,&#10548;>>
--
////


//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.description,&#10548;>>
--
////


//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.DiagramObjects,&#10548;>>
--
////


//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.InstanceSet,&#10548;>>
--
////


//[discrete]
[#MPMResourceStatus]
=== `MPMResourceStatus`



[cols="h,4",width=65%]
|===
| URI
| `cim:MPMTestCategory.MPMResourceStatus`
| Cardinality
| 0..*
| Type
| xref::class/MPMResourceStatus.adoc[`MPMResourceStatus`]


|===

////
[.text-left]
--
<<slots_table.MPMResourceStatus,&#10548;>>
--
////


//[discrete]
[#MPMTestResults]
=== `MPMTestResults`



[cols="h,4",width=65%]
|===
| URI
| `cim:MPMTestCategory.MPMTestResults`
| Cardinality
| 0..*
| Type
| xref::class/MPMTestResults.adoc[`MPMTestResults`]


|===

////
[.text-left]
--
<<slots_table.MPMTestResults,&#10548;>>
--
////


//[discrete]
[#MPMTestThreshold]
=== `MPMTestThreshold`



[cols="h,4",width=65%]
|===
| URI
| `cim:MPMTestCategory.MPMTestThreshold`
| Cardinality
| 0..*
| Type
| xref::class/MPMTestThreshold.adoc[`MPMTestThreshold`]


|===

////
[.text-left]
--
<<slots_table.MPMTestThreshold,&#10548;>>
--
////


//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.mRID,&#10548;>>
--
////


//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.name,&#10548;>>
--
////


//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.Names,&#10548;>>
--
////


//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.PropertiesCIMDataObject,&#10548;>>
--
////


//[discrete]
[#purposeFlag]
=== `purposeFlag`
+++Nature of threshold data:
'M' - Mitigation threshold
'R' - Reporting threshold+++


[cols="h,4",width=65%]
|===
| URI
| `cim:MPMTestCategory.purposeFlag`
| Cardinality
| 0..1
| Type
| xref::enumeration/PurposeFlagType.adoc[`PurposeFlagType`]


|===

////
[.text-left]
--
<<slots_table.purposeFlag,&#10548;>>
--
////


//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.TargetingCIMDataObject,&#10548;>>
--
////


//[discrete]
[#testIdentifier]
=== `testIdentifier`
+++1 - Global Price Test
2 - Global Conduct Test
3 - Global Impact Test
4 - Local Price Test
5 - Local Conduct Test
6 - Local Impact Test+++


[cols="h,4",width=65%]
|===
| URI
| `cim:MPMTestCategory.testIdentifier`
| Cardinality
| 0..1
| Type
| xref::enumeration/MPMTestIdentifierType.adoc[`MPMTestIdentifierType`]


|===

////
[.text-left]
--
<<slots_table.testIdentifier,&#10548;>>
--
////


//[discrete]
[#testMethod]
=== `testMethod`
+++The method of performing the market power monitoring. Examples are Normal (default) thresholds or Alternate thresholds.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:MPMTestCategory.testMethod`
| Cardinality
| 0..1
| Type
| xref::enumeration/MPMTestMethodType.adoc[`MPMTestMethodType`]


|===

////
[.text-left]
--
<<slots_table.testMethod,&#10548;>>
--
////





== Used by


[cols="1,1",width=65%]
|===
| Source class | Slot name



| xref::class/MPMResourceStatus.adoc[`MPMResourceStatus`] | xref::class/MPMResourceStatus.adoc#MPMTestCategory[`MPMTestCategory`]



| xref::class/MPMTestResults.adoc[`MPMTestResults`] | xref::class/MPMTestResults.adoc#MPMTestCategory[`MPMTestCategory`]



| xref::class/MPMTestThreshold.adoc[`MPMTestThreshold`] | xref::class/MPMTestThreshold.adoc#MPMTestCategory[`MPMTestCategory`]


|===

